--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
   <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
 </div>
 <!-- partial -->
-  
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBkzavGtc_WL0mqP_SC0CMpi-45MybYDMg",
+    authDomain: "user-data-e96ed.firebaseapp.com",
+    projectId: "user-data-e96ed",
+    storageBucket: "user-data-e96ed.appspot.com",
+    messagingSenderId: "1066626734064",
+    appId: "1:1066626734064:web:6729ff5d4538c160422f35",
+    measurementId: "G-BG8HXG83TQ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
