--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
   </div>
   <div class="password">
     <label for="password">Password</label>
-    <div class="sec-2">
+    <div class="  sec-2">
       <ion-icon name="lock-closed-outline"></ion-icon>
       <input class="pas" type="password" name="password" placeholder="············"/>
       <ion-icon class="show-hide" name="eye-outline"></ion-icon>
     </div>
   </div>
   <button class="login">Login </button>
-  <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
+  <button class="signup">Sign Up</button> <!-- Updated: Added class="signup" -->
+  <div class="footer"><span><a href="signup.html">Signup</a></span><span>Forgot Password?</span></div> <!-- Updated: Linked to signup.html -->
 </div>
 <!-- partial -->
 
