--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
   </div>
   <button class="login">Login </button>
-  <button class="signup">Sign Up</button> <!-- Updated: Added class="signup" -->
-  <div class="footer"><span><a href="signup.html">Signup</a></span><span>Forgot Password?</span></div> <!-- Updated: Linked to signup.html -->
+  <a href="signup.html"><button class="signup">Sign Up</button></a> <!-- Updated: Linked to signup.html -->
+  <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
 </div>
 <!-- partial -->
 
