--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </svg>
   <div class="email">
     <label for="email">Email Address</label>
-    <div class="sec-2">
+<div class="sec-2">
   <ion-icon name="mail-outline"></ion-icon>
   <input type="email" name="email" placeholder="Username@gmail.com"/>
 </div>
@@ -48,7 +48,7 @@
   </div>
 </div>
 <button class="login">Login </button>
-<a href="signup.html"><button class="signup">Sign Up</button></a> <!-- Updated: Linked to signup.html -->
+<a href="signup.html" class="signup-link"><button class="signup">Sign Up</button></a> <!-- Updated: Linked to signup.html -->
 <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
 </div>
 <!-- partial -->
