--- a/index.html
+++ b/index.html
@@ -18,6 +18,39 @@
       font-weight: 600;
       width: 100%; /* Ensure both buttons have the same width */
     }
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0,0.4);
+    }
+    .modal-content {
+      background-color: #fefefe;
+      margin: 10% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      border-radius: 20px;
+    }
+    .close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -52,16 +85,25 @@
   <div class="password">
     <label for="password">Password</label>
     <div class="  sec-2">
-      <ion-icon name="lock-closed-outline"></ion-icon>
+     <ion-icon name="lock-closed-outline"></ion-icon>
       <input class="pas" type="password" name="password" placeholder="············"/>
       <ion-icon class="show-hide" name="eye-outline"></ion-icon>
     </div>
   </div>
   <button class="login">Login</button>
   <a href="signup.html"><button class="signup">Sign Up</button></a> <!-- Updated: Linked to signup.html -->
-  <div class="footer"><span>Signup</span><span>Forgot Password?</span></div>
+  <div class="footer"><span>Signup</span><span id="forgotPassword">Forgot Password?</span></div>
 </div>
-<!-- partial -->
+
+<!-- Modal -->
+<div id="forgotPasswordModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Enter your email address to reset your password:</p>
+    <input type="email" placeholder="Email Address">
+    <button>Reset Password</button>
+  </div>
+</div>
 
 <!-- Firebase initialization and login handling -->
 <script type="module">
@@ -84,7 +126,7 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
-      } catch (error) {
+  } catch (error) {
     console.error("Error initializing Firebase:", error);
   }
 
@@ -97,6 +139,27 @@
 
   // Add event listener to the login button
   document.querySelector(".login").addEventListener("click", handleLogin);
+
+  // Get the modal element
+  const modal = document.getElementById("forgotPasswordModal");
+
+  // Get the <span> element that closes the modal
+  const span = document.getElementsByClassName("close")[0];
+
+  // When the user clicks on the "Forgot Password?" link, open the modal
+  document.getElementById("forgotPassword").onclick = function() {
+    modal.style.display = "block";
+  };
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+    modal.style.display = "none";
+  };
+
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  };
 </script>
-</body>
-</html>
