--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Finance Mobile Application-UX/UI Design Screen One</title>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap'>
   <link rel="stylesheet" href="./style.css">
@@ -16,9 +14,20 @@
   </svg>
   <div class="email">
     <!-- Email input section -->
+    <label for="email">Email Address</label>
+    <div class="sec-2">
+      <ion-icon name="mail-outline"></ion-icon>
+      <input type="email" name="email" placeholder="Username@gmail.com"/>
+    </div>
   </div>
   <div class="password">
     <!-- Password input section -->
+    <label for="password">Password</label>
+    <div class="  sec-2">
+     <ion-icon name="lock-closed-outline"></ion-icon>
+      <input class="pas" type="password" name="password" placeholder="············"/>
+      <ion-icon class="show-hide" name="eye-outline"></ion-icon>
+    </div>
   </div>
   <button class="login">Login</button>
   <a href="signup.html"><button class="signup">Sign Up</button></a>
@@ -29,6 +38,10 @@
 <div id="forgotPasswordModal" class="modal">
   <div class="modal-content">
     <!-- Modal content -->
+    <span class="close">&times;</span>
+    <p>Enter your email address to reset your password:</p>
+    <input type="email" placeholder="Email Address">
+    <button>Reset Password</button>
   </div>
 </div>
 
